Fix inspector override conversion in InspectorPageAgent::overrideSetting https://bugs.webkit.org/show_bug.cgi?id=200017

Reviewed by Devin Rousso.

Covered by inspector/page/overrideSetting-MockCaptureDevicesEnabled.html
which should not fail on bots not having cameras

* inspector/agents/InspectorPageAgent.cpp:
(WebCore::toOptionalBool):
(WebCore::InspectorPageAgent::overrideSetting):
Previously, the conversion for the mock capture value was implicit from a bool pointer to an optional.
Make an explicit conversion as done for regular settings.


Canonical link: https://commits.webkit.org/213869@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247707 268f45cc-cd09-0410-ab3c-d52691b4dbfc