Source/WebCore/inspector/agents/InspectorPageAgent.cpp
@@ -422,6 +422,13 @@ void InspectorPageAgent::overrideUserAgent(ErrorString&, const String* value)
     m_userAgentOverride = value ? *value : String();
 }
 
+static inline Optional<bool> asOptionalBool(const bool* value)
+{
+    if (!value)
+        return WTF::nullopt;
+    return *value;
+}
+
 void InspectorPageAgent::overrideSetting(ErrorString& errorString, const String& settingString, const bool* value)
 {
     if (settingString.isEmpty()) {
@@ -435,15 +442,12 @@ void InspectorPageAgent::overrideSetting(ErrorString& errorString, const String&
         return;
     }
 
+    auto overrideValue = asOptionalBool(value);
     switch (setting.value()) {
 #define CASE_INSPECTOR_OVERRIDE_SETTING(name) \
-    case Inspector::Protocol::Page::Setting::name: {                               \
-        if (value)                                                                 \
-            m_inspectedPage.settings().set##name##InspectorOverride(*value);       \
-        else                                                                       \
-            m_inspectedPage.settings().set##name##InspectorOverride(WTF::nullopt); \
-        break;                                                                     \
-    }                                                                              \
+    case Inspector::Protocol::Page::Setting::name:                              \
+        m_inspectedPage.settings().set##name##InspectorOverride(overrideValue); \
+        break;                                                                  \
 
     FOR_EACH_INSPECTOR_OVERRIDE_SETTING(CASE_INSPECTOR_OVERRIDE_SETTING)
 
@@ -452,7 +456,7 @@ void InspectorPageAgent::overrideSetting(ErrorString& errorString, const String&
 
     // Update the UIProcess / client for particular overrides.
     if (setting.value() == Inspector::Protocol::Page::Setting::MockCaptureDevicesEnabled)
-        m_client->setMockCaptureDevicesEnabledOverride(value);
+        m_client->setMockCaptureDevicesEnabledOverride(overrideValue);
 }
 
 static Inspector::Protocol::Page::CookieSameSitePolicy cookieSameSitePolicyJSON(Cookie::SameSitePolicy policy)
